@@ -1,6 +1,8 @@
 2008-11-19: Jason Long <jlong@messiah.edu>
  * t/signature.t: further checks for prettify signatures (found a case
    where the new code caused a regression)
+ * lib/Mail/DKIM/TextWrap.pm (flush): remember to update cur position
+   when flushing text
 
 2008-11-10: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/TextWrap.pm (flush): new method to explicitly allow a
